# TG

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/hbase/: DockerfileHBase  hbase.env
.devcontainer/hbase/hadoop_conf/: hadoop-env.sh  mapred-site.xml  yarn-site.xml
.devcontainer/hbase/hbase_conf/: hbase-env.sh  hbase-site.xml
.devcontainer/python/: DockerfilePython
app/: config.yaml  config_loader.py  inspect_db.py  setup.py
app/database_dumper/: interface.py  middleware.py
app/database_dumper/dumpers/: bimtra.py  cat62.py  seta.py  sisceab.py  tatic.py  vra.py
app/database_loader/: interface.py  middleware.py
app/database_loader/loaders/: bimtra.py  cat62.py  seta.py  sisceab.py  tatic.py  vra.py
